fixing spacing and sizes

--- a/TMonster/css/styles.css
+++ b/TMonster/css/styles.css
@@ -2,6 +2,7 @@ body {
 	font-family: 'Gotham SSm A', 'Gotham SSm B', helvetica, sans-serif;
 	font-size: 15px;
 	font-weight: 200;
+	font-style: normal;
 	line-height: 1.5em;
 	color: #fff;
 }
@@ -41,11 +42,12 @@ div {
 	width: 320px;
 	padding: 20 15;
 	margin-left: 10px;
+	line-height: 2em;
 }
 
 .body-copy {
-	font-size: 12px;
-	line-height: 1em;
+	font-size: 13px;
+	line-height: 1.5em;
 	color: #161616;
 	width: 745px;
 	height: 800px;
@@ -75,10 +77,10 @@ h2 {
 }
 
 h3 {
-	font-size: 15px;
+	font-size: 16px;
 	font-weight: 700;
 	font-variant: small-caps;
-	letter-spacing: 3px;
+	letter-spacing: 2px;
 	color: #161616;
 
 }
@@ -94,30 +96,30 @@ h3 {
 	line-height: 1em;
 }
 
-.buttons {
+.buttons a {
 	background-color: #3cb4e7;
 	width: 275px;
 	height: 42px;
-	font-size: 12px;
+	font-size: 14px;
 	color: #fff;
 	padding: 10 15;
 	margin: 20 10;
 }
 
-.buttons .uc {
+.buttons a .uc {
 	background-color: #008100;
-	font-size: 15px;
+	font-size: 17px;
 	font-variant: small-caps;
-	letter-spacing: 2px;
+	letter-spacing: 1px;
 }
 
-.buttons .lc-bold{
-	font-weight: 400;
+.buttons a .lc-bold{
+	font-weight: 500;
 }
 
-.buttons .uc-bold{
-	font-weight: 400;
+.buttons a .uc-bold{
+	font-weight: 500;
 	font-size: 15px;
 	font-variant: small-caps;
-	letter-spacing: 2px;
+	letter-spacing: 1px;
 }
